gyeongbuk/task1/manifest/fargate-ns.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: wsi
  labels:
    aws-observability: enabled
